--- a/EECIP/Views/Account/SetPermPassword.cshtml
+++ b/EECIP/Views/Account/SetPermPassword.cshtml
@@ -27,7 +27,7 @@
             @Html.ValidationMessageFor(m => m.ConfirmPassword)
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
-        @Html.ActionLink("Cancel", "Index", "Home", new object { }, new { @class = "pull-right m-t-xs" })
+        <button type="button" class="btn pull-right" onclick="history.go(-1);"><i class="glyphicon glyphicon-arrow-left"></i> Back</button>
     }
 
 </div>
