--- a/EECIP/Views/Account/UserProfile.cshtml
+++ b/EECIP/Views/Account/UserProfile.cshtml
@@ -1,6 +1,7 @@
 ﻿@model EECIP.Models.vmAccountUserProfile
 @{
     ViewBag.Title = "User Profile";
+    ViewBag.SubTitle = Model.OrgName;
 }
 
 @using (Html.BeginForm("UserProfile", "Account", FormMethod.Post, new { @class = "hbox stretch", @id = "norepostform", enctype = "multipart/form-data" }))
@@ -62,6 +63,14 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    @if (Model.uListInd != "a")
+                                    {
+                                    <a class=" btn btn-orange pull-right" href="@Url.Action("SetPermPassword" )">Change Password</a>
+                                    }
+                                </div>
+                            </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
@@ -112,8 +121,15 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>Agency</label>
-                                @Html.DropDownListFor(model => model.OrgIDX, Model.ddl_Agencies, "-Please Select-", new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.FName)
+                                @if (Model.uListInd == "a")
+                                {
+                                    @Html.DropDownListFor(model => model.OrgIDX, Model.ddl_Agencies, "-Please Select-", new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.FName)
+                                }
+                                else
+                                {
+                                    @Html.LabelFor(model => model.OrgName)
+                                }
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -158,7 +174,6 @@
     else
     {
         <a class="btn btn-default" href="@Url.Action("Index", "Dashboard")">Close</a>
-        <a class=" btn btn-orange pull-right" href="@Url.Action("SetPermPassword" )">Change Password</a>
     }
     <button type="submit" class="btn btn-primary">Save</button>
 
